chore: Update README with project description and collaborators

--- a/prep_data.ipynb
+++ b/prep_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Paths:\n",
-    "  transcriptions = 'datasets/addresso/train/transcription'\n",
-    "  text_participants = 'datasets/addresso/train/text_participants'\n",
-    "  text_both = 'datasets/addresso/train/text_both'"
+    "  path = '/vol/tensusers3/thijsdejong/2324-asr'\n",
+    "  transcriptions = f'{path}/datasets/addresso/test/transcription'\n",
+    "  text_participants = f'{path}/datasets/addresso/test/text_participants'\n",
+    "  text_both = f'{path}/datasets/addresso/test/text_both'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,44 +60,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INV: One more thing.\n",
-      "INV: What I want you to do is take a look at that picture.\n",
-      "PAR: Mhm.\n",
-      "INV: And tell me everything you see happening, everything that's going on.\n",
-      "PAR: Well the water's running over on the floor.\n",
-      "PAR: The stool is tilting.\n",
-      "PAR: The boy is into the cookie jar.\n",
-      "PAR: And his sister is reaching for a cookie.\n",
-      "PAR: The mother's drying dishes.\n",
-      "PAR: Do you want action or just want anything I see?\n",
-      "INV: Just action.\n",
-      "PAR: Okay.\n",
-      "INV: Okay thanks very much.\n",
-      "PAR: Mhm.\n",
+      "PAR: This boy is about to fall off of the stool.\n",
+      "PAR: The mother is washing dishes and the water's spilling over on the kitchen floor.\n",
+      "PAR: The wind is blowing the curtains.\n",
+      "PAR: The little girl is laughing at her brother who's taking a cookie out_of the cookie jar.\n",
+      "PAR: Think that's it.\n",
+      "INV: Okay.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(path_to_text(path.join(Paths.transcriptions, 'S033.cha'), full_transcript=True))"
+    "print(path_to_text(path.join(Paths.transcriptions, 'S160.cha'), full_transcript=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing S165...\n",
+      "Processing S166...\n",
+      "Processing S167...\n",
+      "Processing S168...\n",
+      "Processing S169...\n",
+      "Processing S170...\n",
+      "Processing S171...\n",
+      "Processing S172...\n",
+      "Processing S173...\n",
+      "Processing S174...\n",
+      "Processing S175...\n",
+      "Processing S176...\n",
+      "Processing S177...\n",
+      "Processing S178...\n",
+      "Processing S179...\n",
+      "Processing S180...\n",
+      "Processing S181...\n",
+      "Processing S182...\n",
+      "Processing S183...\n",
+      "Processing S184...\n",
+      "Processing S185...\n",
+      "Processing S186...\n",
+      "Processing S187...\n",
+      "Processing S188...\n",
+      "Processing S189...\n",
+      "Processing S190...\n",
+      "Processing S191...\n",
+      "Processing S192...\n",
+      "Processing S193...\n",
+      "Processing S194...\n",
+      "Processing S195...\n",
+      "Processing S196...\n",
+      "Processing S197...\n",
+      "Processing S198...\n",
+      "Processing S199...\n",
+      "Processing S200...\n",
+      "Processing S201...\n",
+      "Processing S202...\n",
+      "Processing S203...\n",
+      "Processing S204...\n",
+      "Processing S205...\n",
+      "Processing S206...\n",
+      "Processing S207...\n",
+      "Processing S164...\n",
+      "Processing S160...\n",
+      "Processing S161...\n",
+      "Processing S162...\n",
+      "Processing S163...\n"
+     ]
+    }
+   ],
    "source": [
     "for file in os.listdir(Paths.transcriptions):\n",
     "  if file.endswith('.cha'):\n",
     "    ID = file.split('.')[0]\n",
+    "    print(f'Processing {ID}...')\n",
     "\n",
     "    text_participants = path_to_text(path.join(Paths.transcriptions, file), full_transcript=False)\n",
     "    text_both = path_to_text(path.join(Paths.transcriptions, file), full_transcript=True)\n",
@@ -129,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
